force-app/main/default/objects/leaseworks__Payout_Line_Item__c/leaseworks__Payout_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Payouts
Payout Line Items represent individual entries associated with a payout transaction. Each line item provides detailed information about the specific amount applied to each payable line on the applied payable
Population Requirement Details: The system automatically creates payable line items upon the creation of the payable record. The system allocates the payout line amount based on the payout amount and the payable line balance amount if the triggers are ON. If the trigger is OFF, the data for the payout line items must be manually loaded. However, this is not a recommended method for loading payout line data.
[MODULE: Finance]
[LOAD: Optional]
[PREREQUISITES: Payout (if loading with Triggers OFF)]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Payout Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payout Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>