force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the link to the Invoice line to which the payout line item is related.</description>
    <inlineHelpText>Indicates the link to the Invoice line to which the payout line item is related.</inlineHelpText>
    <label>Invoice Line Item</label>
    <referenceTo>leaseworks__Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Payout Line Item</relationshipLabel>
    <relationshipName>Payout_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>