force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Payable_Line_Amount_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Line_Amount_Balance_Due__c</fullName>
    <description>Balance due on the corresponding payable Line</description>
    <formula>leaseworks__Payable_Line_Item__r.leaseworks__Line_Amount_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due on the corresponding payable line</inlineHelpText>
    <label>Z_Unused_2106 Payable Line Amt Blnc Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>