force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Payable_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2106 Payable Line Item</label>
    <referenceTo>leaseworks__Py_Line_Item__c</referenceTo>
    <relationshipLabel>Payout Line Item</relationshipLabel>
    <relationshipName>Payout_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>