force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Payable_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Type__c</fullName>
    <description>Type of Parent Payable</description>
    <formula>leaseworks__Payouts__r.leaseworks__Payables_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Type</label>
    <type>Text</type>
</CustomField>