force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Payout_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payout_Line_Type__c</fullName>
    <label>Payout Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Security Deposit Refund</fullName>
            </value>
            <value>
                <fullName>MR Claim Event</fullName>
                <label>MR Claim</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>MR Reconciliation Refund</fullName>
            </value>
            <value>
                <fullName>Manual MR Payable</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MR TrueUp</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>Lessor Commitment</fullName>
            </value>
            <value>
                <fullName>Lessor Contribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>