force-app/main/default/objects/leaseworks__Payout_Line_Item__c/fields/leaseworks__Payout_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payout_Source__c</fullName>
    <description>Payout source from Parent Payout</description>
    <formula>TEXT( leaseworks__Payouts__r.leaseworks__Payout_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Source</label>
    <type>Text</type>
</CustomField>